--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <p>Quand on voit tes explois. On se demande quel culot as tu?kkkk dans les petit 
                     entrainement, les nouvelles te défend, dans les grands match le banc de touche
-                    te reconforte kkkkk euuuuhh calme ta joie! c'est une blague,
+                    te reconforte kkkkk euuuuhh calme ta joie! c'est une blague, ou un record KK
                 </p>              
             </article>
         </div>
