--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div >
             <article class="cou">
                 <img src="./Nouveau/ewa.jpg"  class="div2" alt="oui">
-                <p>Souviens tu de on se te dit rendez vous dans 10ans. on verra quand on aura 32ans.
-                    et toi Coralie nananna même jour même heure même porte. même si qu'on n'a pas eu notre 
+                <p>Souviens tu de on se te dit rendez vous dans 10ans. On verra quand on aura 32ans.
+                    et toi Coralie nanana même jour même heure même porte. Même si qu'on n'a pas eu notre 
                     gateau.</p>
                 
             </article>
